Fix filter button overlapping on mobile

--- a/core/app/shell/src/themes/suite8/css/components/_minimal-table.scss
+++ b/core/app/shell/src/themes/suite8/css/components/_minimal-table.scss
@@ -211,3 +211,7 @@
     }
   }
 }
+
+.sub-panels .minimal-table .card .card-header {
+  height: 100%;
+}
